# cmake-learning

./: .gitignore  CMakeLists.txt  License.txt  README.md  main.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
